building_simple_service/simple_service_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  type: NodePort
  ports:
  - port: 8080        # cổng dịch vụ ánh xạ vào cổng POD
    targetPort: 80    # cổng POD ánh xạ vào container
    protocol: TCP
    name: service-http
    nodePort: 31000   # cổng NODE ánh xạ vào cổng dịch vụ (chỉ chọn 30000-32767)

  - port: 443
    targetPort: 443
    protocol: TCP
    name: service-https
    nodePort: 31443
  # Chú ý đúng với Label của POD tại Deployment
  selector:
    pod-label: nginx-pod
