building_simple_service/simple_nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - phamvandan.test
      secretName: secret-nginx-cert
  rules:
  - host: phamvandan.test
    http:
      paths:
      - path: /tls
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service
            port:
              number: 80
              
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service
            port:
              number: 80
